# openilink-sdk-python

./: .gitignore  README.md  pyproject.toml
.claude/skills/ilink-auto/: SKILL.md
.claude/skills/ilink-check/: SKILL.md
.claude/skills/ilink-reconnect/: SKILL.md
.claude/skills/ilink-reply/: SKILL.md
.claude/skills/ilink-start/: SKILL.md
.claude/skills/ilink-stop/: SKILL.md
.github/workflows/: publish.yml
docs/: claude-code-guide.md  restart-guide.md
examples/: echo_bot.py
openilink/: __init__.py  __main__.py  auth.py  auto.py  cli.py  client.py  crypto.py  daemon.py  errors.py  filelock.py  helpers.py  http.py  mcp_server.py  mime.py  monitor.py  types.py  voice.py
