[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openilink-sdk-python"
version = "0.1.0"
description = "Python client for the Weixin iLink Bot API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28",
    "qrcode>=7.0",
]

[project.urls]
Homepage = "https://github.com/openilink/openilink-sdk-python"

[tool.setuptools.packages.find]
include = ["openilink*"]
